--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: 'MiniPC_bold';
+    src: url('../fonts/alsschlangesans-bold.otf');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+    font-family: 'MiniPC_light';
+    src: url('../fonts/alsschlangesans.otf');
+    font-weight: normal;
+    font-style: normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+    font-family: 'MiniPC_bold';
+    font-size: 21px;
+    padding: 0;
+    margin: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body{
+    background-color: whitesmoke;
 }
 
-.App-link {
-  color: #61dafb;
+header{
+    height: 10vh;
+    min-height: 100px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {    
+    border-radius: 60px;
+    overflow: hidden;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    min-width: 450px;
+    position: absolute;
+    z-index: 2;
+    width: 45%;
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+}
+
+main {
+    height: 80vh;
+    min-height: 500px;
+    position: relative;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+}
+
+main article {
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
+    border: 0px solid rgba(255, 255, 255, 0.2);
+    border-radius: 50px;
+    width: 40%;
+    height: 20vh;
+    min-height: 300px;
+    min-width: 500px;
+    padding: 20px;
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 7%;
+}
+
+main article h1 {
+    margin-bottom: 30px;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 10vh;
 }
