--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -27,7 +27,6 @@ body{
 
 header{
     height: 7vh;
-    /* min-height: 69px; */
     position: relative;
     display: flex;
     align-items: center;
@@ -47,7 +46,7 @@ nav {
     align-content: center;
 }
 
-main {
+.main_main_page {
     height: 86vh;
     min-height: 500px;
     position: relative;
@@ -56,7 +55,7 @@ main {
     justify-content: center;
 }
 
-main article {
+.main_main_page article {
     background: linear-gradient(90deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
@@ -78,7 +77,7 @@ main article {
     margin-top: 7%;
 }
 
-main article h1 {
+.main_main_page article h1 {
     margin-bottom: 30px;
 }
 
