--- a/frontend/src/css/Form.css
+++ b/frontend/src/css/Form.css
@@ -1,17 +1,19 @@
 .main_form_page {
-    background-color: aqua;
+    /* background-color: aqua; */
     min-width: 330px;
     height: 86vh;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
 }
 
 .main_form_page article {
     background-color: brown;
-    padding: 100px;
+    height: 60%;
+    /* width: 25%; */
+    padding: 20px;
     margin: 20px;
     border-radius: 20px;
 }
