--- a/frontend/src/css/Form.css
+++ b/frontend/src/css/Form.css
@@ -1,5 +1,4 @@
 .main_form_page {
-    /* background-color: aqua; */
     min-width: 330px;
     height: 86vh;
     display: flex;
@@ -10,7 +9,6 @@
 }
 
 .main_form_page article {
-    /* background-color: brown; */
     height: 70%;
     width: 20%;
     padding: 20px; /* Внутренний отступ, хватит путать 👺 */
@@ -23,29 +21,12 @@
 }
 
 .auth_form {
-    /* background-color: rgb(111, 255, 0); */
     border-radius: 20px;
     height: 75%;
     padding: 20px;
+    min-height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}
-
-.form_btn_container{
-    /* background-color: bisque; */
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.main_form_page article h1 {
-    /* background-color: aquamarine; */
-    text-align: center;
-}
-
-.main_form_page article p {
-    /* background-color: antiquewhite; */
     text-align: center;
 }
